# wyby

./: .env.example  .gitignore  CLAUDE.md  PRD.md  PRD.yaml  README.md  SCOPE.md  pyproject.toml  pyvenv.cfg
docs/: IMPLEMENTATION_PLAN.md  PREFLIGHT.md  compatibility_matrix.md  dithering_and_aspect.md  entity_model.md  font_terminal_variance.md  image_conversion_performance.md  physics_design.md  rendering_performance.md
examples/: flappy_bird_game.py  healthbar_demo.py  hello_world.py  mainmenu_game.py  pong_game.py  snake_game.py
src/runetui/: __init__.py  collision.py  components.py  engine.py  entity.py  events.py  input_manager.py  logging_config.py  renderer.py  scene.py  sprite.py  widgets.py
src/wyby/: __init__.py  _logging.py  _platform.py  alt_screen.py  animation.py  api_reference.py  app.py  architecture_diagram.py  button.py  cell_size_map.py  collision.py  collision_accuracy.py  color.py  compatibility_matrix.py  component.py  controls_doc.py  curses_migration.py  cursor.py  diagnostics.py  dialog.py  dithering.py  entity.py  event.py  example_line_counts.py  example_platforms.py  example_readme.py  example_runner.py  focus.py  font_variance.py  grid.py  healthbar.py  input.py  input_context.py  input_permissions.py  installation_from_source.py  keymap.py  layer.py  layout.py  limitations_caveats.py  mouse_warnings.py  (+25 more)
src/wyby.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_alt_screen.py  test_animation.py  test_api_reference.py  test_architecture_diagram.py  test_button.py  test_cell_size_map.py  test_clip.py  test_collision.py  test_collision_accuracy.py  test_color_fallback.py  test_compatibility_matrix.py  test_component.py  test_controls_doc.py  test_curses_migration.py  test_cursor.py  test_detect_truecolor.py  test_diagnostics.py  test_dialog.py  test_dithering.py  test_double_buffer.py  test_emoji_sprite.py  test_engine.py  test_engine_config.py  test_engine_extended.py  test_entity.py  test_entity_collide_with.py  test_entity_lifecycle.py  test_event.py  test_event_queue_integration.py  test_events.py  test_example_line_counts.py  test_example_platforms.py  test_example_readme.py  test_example_runner.py  test_example_scenes.py  test_flappy_bird_game.py  test_focus.py  test_font_variance.py  test_from_image.py  test_from_image_with_fallback.py  (+60 more)
