[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wyby"
version = "0.1.0dev0"
description = "A Python framework for terminal-rendered 2D games"
requires-python = ">=3.10"
license = "GPL-3.0-only"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
