[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wyby"
version = "0.1.0dev0"
description = "A Python framework for terminal-rendered 2D games"
requires-python = ">=3.10"
license = "GPL-3.0-only"
# Rich is the sole runtime dependency — it provides styled text rendering,
# Live display for game loops, and cross-platform terminal support (including
# Windows without windows-curses). Pinned to >=13.0 for Live and Console
# features used by the renderer.
dependencies = [
    "rich>=13.0",
]

[project.optional-dependencies]
# Image loading support — Pillow is only needed for from_image().
# Install with `pip install -e ".[image]"` or `pip install wyby[image]`.
image = [
    "Pillow>=9.0",
]
# Dev dependencies kept as optional extras so CI and contributors can
# install them with `pip install -e ".[dev]"` without polluting the
# runtime dependency tree.
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4.0",
    "Pillow>=9.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Caveat: --cov-branch enables branch coverage, which is stricter than line
# coverage alone. Early in development some branches may be hard to exercise
# (e.g. platform-specific paths). Adjust --cov-fail-under as the codebase
# matures. Currently set conservatively since most modules are stubs.
addopts = [
    "--strict-markers",
    "--cov=wyby",
    "--cov-branch",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.coverage.run]
source = ["wyby"]
branch = true
# Caveat: omit patterns use fnmatch syntax relative to the source tree.
# The _platform module may need platform-specific test fixtures later;
# for now it is included in coverage.

[tool.coverage.report]
show_missing = true
# Caveat: fail_under is intentionally unset during pre-release. Most modules
# are stubs with no real logic yet. Set a threshold (e.g. 80) once the core
# modules (app, renderer, grid) have real implementations.
# fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "@overload",
    "raise NotImplementedError",
    "\\.\\.\\.",
]

[tool.coverage.html]
directory = "htmlcov"
